--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
 	"name": "leaflet-geonames",
-	"version": "0.4.3",
+	"version": "0.4.4",
 	"description": "Geonames Geocoding Search Control for Leaflet",
-  	"homepage": "http://github.com/consbio/Leaflet.Geonames",
-  	"author": {
-	  	"name": "Brendan Ward",
-	  	"email": "bcward@consbio.org"
+	"homepage": "http://github.com/consbio/Leaflet.Geonames",
+	"author": {
+		"name": "Brendan Ward",
+		"email": "bcward@consbio.org"
 	},
 	"devDependencies": {
-		"uglify-js": "~2.4.16",
+		"uglify-js": "uglify-js ~> 2.6.0",
 		"jake": "~8.0.10",
-        "node-minify": "~1.0.1"
+		"node-minify": "~1.0.1"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git://github.com/consbio/Leaflet.Geonames"
 	},
-	"keywords": ["leaflet"]
+	"keywords": [
+		"leaflet"
+	]
 }
